:tada:0.0.4版本，解决有些设备不能清除log的bug 现在还存在一个问题：特定设备清除log后，process已经关闭，但是buffer仍然阻塞导致一直没有log，只能重新刷新的bug